Update help ug command in cheatsheet

--- a/src/main/resources/view/help.html
+++ b/src/main/resources/view/help.html
@@ -30,10 +30,10 @@
 			<td>F1</td>
 		</tr>
 		<tr>
-			<td>Helpug</td>
-			<td class="code">helpug</td>
+			<td>Help ug</td>
+			<td class="code">help ug</td>
 			<td>Open userguide window</td>
-			<td>helpug, helpuserguide, ug</td>
+			<td>help ug, help userguide</td>
 		</tr>
 		<tr>
 			<td>Add</td>
