--- a/src/main/resources/view/UserGuide.html
+++ b/src/main/resources/view/UserGuide.html
@@ -95,11 +95,11 @@ Figure 5: Add a to-do</p>
 <p>Refer to the <a href="#command-format">Command Format</a> section below if you do not understand the command format.</p>
 <blockquote>
 <ul class="list">
-<li><p><code>s/</code> refers to the starting date / time.</p>
+<li><code>s/</code> refers to the starting date / time.
 </li>
-<li><p><code>e/</code> refers to the ending date / time.</p>
+<li><code>e/</code> refers to the ending date / time.
 </li>
-<li><p><code>r/</code> refers to the recurring period of the task. It can be <code>daily</code>, <code>weekly</code>, <code>monthly</code> or <code>yearly</code></p>
+<li><code>r/</code> refers to the recurring period of the task. It can be <code>daily</code>, <code>weekly</code>, <code>monthly</code> or <code>yearly</code>
 </li>
 <li><code>d/</code> refers to the description of the task.</li>
 <li><code>p/</code> refers to the priority level of the task. It can be <code>high</code> (<code>h</code>), <code>medium</code> (<code>m</code>) or <code>low</code> (<code>l</code>).</li>
@@ -131,6 +131,7 @@ Figure 5: Add a to-do</p>
 <p>Refer to the <a href="#command-format">Command Format</a> section below if you do not understand the command format.</p>
 <blockquote>
 <ul class="list">
+<li><code>DONE_STATUS</code> can be <code>DONE</code>, <code>UNDONE</code>, or <code>ALL</code>.</li>
 <li><code>o/</code> refers to order that the tasks are sorted by. </li>
 <li>You can sort by <code>priority</code>, <code>alphanumeric</code> and <code>dateTime</code>.</li>
 <li>You can also filter and sort your tasks with multiple parameters. Only tasks that  satisfy the filtering criteria will be shown.<ul class="list">
