removed 2nd panel, task completeness is now indicated by color

--- a/src/main/resources/view/Extensions.css
+++ b/src/main/resources/view/Extensions.css
@@ -3,6 +3,13 @@
     -fx-background-color: #f08080;
 }
 
+.incomplete {
+    -fx-border-color: #69dead;
+}
+
+.complete {
+    -fx-border-color: #ffcccc;
+}
 
 .tag-selector {
     -fx-border-width: 1;
