--- a/src/main/resources/themes/DarkTheme.css
+++ b/src/main/resources/themes/DarkTheme.css
@@ -2,6 +2,11 @@
     -fx-background-color: derive(#1d1d1d, 20%);
 }
 
+.text-area {
+	-fx-font-size: 12pt;
+ 	-fx-font-family: "Segoe UI Semibold";
+}
+
 .label {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
@@ -12,14 +17,14 @@
 .label-bright {
     -fx-font-size: 11pt;
     -fx-font-family: "Segoe UI Semibold";
-    -fx-text-fill: white;
+    -fx-text-fill: black;
     -fx-opacity: 1;
 }
 
 .label-header {
     -fx-font-size: 32pt;
     -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: white;
+    -fx-text-fill: black;
     -fx-opacity: 1;
 }
 
@@ -66,7 +71,7 @@
 .table-view .column-header .label {
     -fx-font-size: 20pt;
     -fx-font-family: "Segoe UI Light";
-    -fx-text-fill: white;
+    -fx-text-fill: black;
     -fx-alignment: center-left;
     -fx-opacity: 1;
 }
@@ -77,7 +82,7 @@
 
 .split-pane:horizontal .split-pane-divider {
     -fx-border-color: transparent #1d1d1d transparent #1d1d1d;
-    -fx-background-color: transparent, derive(#1d1d1d, 10%);
+    -fx-background-color: transparent, #1d1d1d;
 }
 
 .split-pane {
@@ -130,7 +135,7 @@
 }
 
 .status-bar .label {
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .status-bar-with-border {
@@ -140,7 +145,7 @@
 }
 
 .status-bar-with-border .label {
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .grid-pane {
@@ -158,7 +163,7 @@
 }
 
 .context-menu .label {
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .menu-bar {
@@ -198,12 +203,12 @@
 }
 
 .button:pressed, .button:default:hover:pressed {
-  -fx-background-color: white;
+  -fx-background-color: black;
   -fx-text-fill: #1d1d1d;
 }
 
 .button:focused {
-    -fx-border-color: white, white;
+    -fx-border-color: black, black;
     -fx-border-width: 1, 1;
     -fx-border-style: solid, segments(1, 1);
     -fx-border-radius: 0, 0;
@@ -213,7 +218,7 @@
 .button:disabled, .button:default:disabled {
     -fx-opacity: 0.4;
     -fx-background-color: #1d1d1d;
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .button:default {
@@ -236,7 +241,7 @@
 .dialog-pane > *.label.content {
     -fx-font-size: 14px;
     -fx-font-weight: bold;
-    -fx-text-fill: white;
+    -fx-text-fill: black;
 }
 
 .dialog-pane:header *.header-panel {
@@ -246,8 +251,8 @@
 .dialog-pane:header *.header-panel *.label {
     -fx-font-size: 18px;
     -fx-font-style: italic;
-    -fx-fill: white;
-    -fx-text-fill: white;
+    -fx-fill: black;
+    -fx-text-fill: black;
 }
 
 .scroll-bar .thumb {
@@ -273,7 +278,24 @@
 }
 
 #cardPane {
-    -fx-border-width: 1 1 1 24;
+    -fx-border-width: 2 2 2 24;
+}
+
+#cardPane #group {
+	-fx-font-size: 8pt;
+	-fx-font-family: "Segoe UI Light";
+	-fx-hgap: 7;
+    -fx-vgap: 3;
+    -fx-text-fill: white;
+    -fx-background-color: #383838;
+    -fx-padding: 1 1 1 1;
+    -fx-border-radius: 2;
+    -fx-background-radius: 2;
+}
+
+#cardPane .label {
+	-fx-font-size: 11pt;
+	-fx-font-family: "Segoe UI Light";
 }
 
 #commandTypeLabel {
@@ -285,12 +307,9 @@
     -fx-effect: innershadow(gaussian, black, 10, 0, 0, 0);
 }
 
-#tags {
-    -fx-hgap: 7;
-    -fx-vgap: 3;
-}
-
 #tags .label {
+	-fx-hgap: 7;
+    -fx-vgap: 3;
     -fx-text-fill: white;
     -fx-background-color: #383838;
     -fx-padding: 1 3 1 3;
