--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -14,16 +14,16 @@
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="25.0">
           <children>
-                  <HBox alignment="CENTER_LEFT" minWidth="180.0" prefWidth="180.0" spacing="5">
+                  <HBox alignment="CENTER_LEFT" minWidth="200.0" prefHeight="25.0" prefWidth="219.0" spacing="5">
                       <children>
                           <HBox alignment="CENTER_LEFT">
-                              <Label fx:id="id" prefWidth="40.0" style="-fx-text-fill: white;" styleClass="cell_big_label" />
+                              <Label fx:id="id" prefWidth="35.0" style="-fx-text-fill: white;" styleClass="cell_big_label" />
                               <Label fx:id="name" style="-fx-text-fill: white;" styleClass="cell_big_label" text="\$first" />
                           </HBox>
                       </children>
                   </HBox>
-                  <Label fx:id="startTime" minWidth="110.0" prefWidth="110.0" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$start time" />
-                  <Label fx:id="endTime" minWidth="110.0" prefWidth="110.0" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$end time" />
+                  <Label fx:id="startTime" minWidth="100.0" prefWidth="100.0" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$start time" />
+                  <Label fx:id="endTime" minWidth="100.0" prefWidth="100.0" style="-fx-text-fill: white;" styleClass="cell_small_label" text="\$end time" />
           </children>
          <VBox.margin>
             <Insets />
