--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -43,7 +43,7 @@
        </AnchorPane>
       <SplitPane id="splitPane" fx:id="splitPane" dividerPositions="0.3" VBox.vgrow="ALWAYS">
          <items>
-            <VBox fx:id="menuBarView" prefWidth="130.0">
+            <VBox fx:id="menuBar" prefWidth="130.0">
                <padding>
          			<Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
          		</padding>
