improve userguide, update help window, cheatsheet, aboutus, testscript

--- a/src/main/resources/view/UserGuide.html
+++ b/src/main/resources/view/UserGuide.html
@@ -276,37 +276,41 @@ Figure 5: Add a to-do</p>
 <td style="text-align:left">Add</td>
 <td style="text-align:left"><code>add NAME [s/START_DATE] [e/END_DATE] [r/RECUR] [d/DESCRIPTION] [p/PRIORITY] [t/TAG]...</code></td>
 <td style="text-align:left">Add a task</td>
+<td style="text-align:left">a</td>
 </tr>
 <tr>
 <td style="text-align:left">Edit</td>
 <td style="text-align:left"><code>edit PREFIX_INDEX [NAME] [s/START_DATE] [e/END_DATE] [r/RECUR] [d/DESCRIPTION] [p/PRIORITY] [t/TAG]...</code></td>
 <td style="text-align:left">Edit any specified task&#39;s information</td>
+<td style="text-align:left">e</td>
 </tr>
 <tr>
 <td style="text-align:left">List</td>
 <td style="text-align:left"><code>list [DONE_STATUS] [s/START_DATE] [e/END_DATE] [o/ORDER] [p/PRIORITY] [t/TAG]...</code></td>
 <td style="text-align:left">List specified tasks in specified order</td>
-<td style="text-align:left">Ctrl+Shift+D,  Ctrl+Shift+U, Ctrl+Shift+A (list <em>Done</em>, <em>Undone</em> and <em>All</em> respecively)</td>
+<td style="text-align:left">ls</td>
 </tr>
 <tr>
 <td style="text-align:left">Find</td>
 <td style="text-align:left"><code>find KEYWORD [MORE_KEYWORDS]...</code></td>
-<td style="text-align:left">Find tasks with keywords</td>
+<td style="text-align:left">f</td>
 </tr>
 <tr>
 <td style="text-align:left">Select</td>
 <td style="text-align:left"><code>select PREFIX_INDEX</code></td>
-<td style="text-align:left">Select a task to view</td>
+<td style="text-align:left">s</td>
 </tr>
 <tr>
 <td style="text-align:left">Done</td>
 <td style="text-align:left"><code>done PREFIX_INDEX</code></td>
 <td style="text-align:left">Archive the specified task</td>
+<td style="text-align:left"></td>
 </tr>
 <tr>
 <td style="text-align:left">Undone</td>
 <td style="text-align:left"><code>undone PREFIX_INDEX</code></td>
 <td style="text-align:left">Unarchive the specified task</td>
+<td style="text-align:left"></td>
 </tr>
 <tr>
 <td style="text-align:left">Undo</td>
@@ -324,26 +328,31 @@ Figure 5: Add a to-do</p>
 <td style="text-align:left">Save</td>
 <td style="text-align:left"><code>save [overwrite] FILE_PATH</code></td>
 <td style="text-align:left">Save file to specified location</td>
+<td style="text-align:left"></td>
 </tr>
 <tr>
 <td style="text-align:left">Export</td>
 <td style="text-align:left"><code>export [overwrite] FILE_PATH</code></td>
 <td style="text-align:left">Export file to specified location</td>
+<td style="text-align:left"></td>
 </tr>
 <tr>
 <td style="text-align:left">Import</td>
 <td style="text-align:left"><code>import FILE_PATH</code></td>
 <td style="text-align:left">Import file to be used</td>
+<td style="text-align:left"></td>
 </tr>
 <tr>
 <td style="text-align:left">Delete</td>
 <td style="text-align:left"><code>delete PREFIX_INDEX</code></td>
 <td style="text-align:left">Delete specified task</td>
+<td style="text-align:left">d</td>
 </tr>
 <tr>
 <td style="text-align:left">Clear</td>
 <td style="text-align:left"><code>clear</code></td>
 <td style="text-align:left">Clear all data in OneTwoDo</td>
+<td style="text-align:left"></td>
 </tr>
 <tr>
 <td style="text-align:left">Exit</td>
