--- a/src/main/resources/view/help.html
+++ b/src/main/resources/view/help.html
@@ -40,34 +40,33 @@
 			<td class="code">add NAME [s/START_DATE] [e/END_DATE] [r/RECUR]
 				[d/DESCRIPTION] [p/PRIORITY] [t/TAG]...</td>
 			<td>Add a task</td>
-			<td></td>
+			<td>a</td>
 		</tr>
 		<tr>
 			<td>Edit</td>
 			<td class="code">edit PREFIX_INDEX [NAME] [s/START_DATE] [e/END_DATE]
 				[r/RECUR] [d/DESCRIPTION] [p/PRIORITY] [t/TAG]...</td>
 			<td>Edit any specified task&rsquo;s information</td>
-			<td></td>
+			<td>e</td>
 		</tr>
 		<tr>
 			<td>List</td>
 			<td class="code">list [DONE_STATUS] [s/START_DATE] [e/END_DATE] [o/ORDER]
 				[p/PRIORITY] [t/TAG]...</td>
 			<td>List specified tasks in specified order</td>
-			<td>Ctrl+Shift+D,  Ctrl+Shift+U, Ctrl+Shift+A
-				(list Done, Undone and All respecively)</td>
+			<td>ls</td>
 		</tr>
 		<tr>
 			<td>Find</td>
 			<td class="code">find KEYWORD [MORE_KEYWORDS]...</td>
 			<td>Find tasks with keywords</td>
-			<td></td>
+			<td>f</td>
 		</tr>
 		<tr>
 			<td>Select</td>
 			<td class="code">select PREFIX_INDEX</td>
 			<td>Select a task to view</td>
-			<td></td>
+			<td>s</td>
 		</tr>
 		<tr>
 			<td>Done</td>
@@ -85,7 +84,7 @@
 			<td>Undo</td>
 			<td class="code">undo</td>
 			<td>Undo previous action</td>
-			<td>Ctrl+U</td>
+			<td>Ctrl+Z</td>
 		</tr>
 		<tr>
 			<td>Redo</td>
@@ -115,7 +114,7 @@
 			<td>Delete</td>
 			<td class="code">delete PREFIX_INDEX</td>
 			<td>Delete specified task</td>
-			<td></td>
+			<td>d</td>
 		</tr>
 		<tr>
 			<td>Clear</td>
