--- a/src/main/resources/view/TaskListCard.fxml
+++ b/src/main/resources/view/TaskListCard.fxml
@@ -19,7 +19,7 @@
 	<children>
 		<GridPane HBox.hgrow="ALWAYS">
 			<columnConstraints>
-				<ColumnConstraints hgrow="SOMETIMES" maxWidth="500.0" minWidth="10.0" prefWidth="250.0" />
+				<ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="250.0" />
             <ColumnConstraints />
 			</columnConstraints>
 			<children>
@@ -41,7 +41,7 @@
 						<Label fx:id="description" styleClass="cell_small_label" text="\$description" wrapText="true" />
 					</children>
 				</VBox>
-				<VBox alignment="CENTER_RIGHT" minWidth="160.0" prefHeight="105.0" prefWidth="160.0" GridPane.columnIndex="1">
+				<VBox alignment="CENTER_RIGHT" minWidth="180.0" prefHeight="105.0" prefWidth="180.0" GridPane.columnIndex="1">
 					<padding>
 						<Insets bottom="5" left="1" right="10" top="5" />
 					</padding>
