--- a/src/main/resources/themes/BurntCopperTheme.css
+++ b/src/main/resources/themes/BurntCopperTheme.css
@@ -277,7 +277,7 @@
     -fx-padding: 8 1 8 1;
 }
 
-/*@@author A0163848R */
+/*@@author A0163848R-reused */
 #cardPane {
     -fx-border-width: 2 2 2 24;
 }
