Remove hackmd link from dg

--- a/src/main/resources/view/DeveloperGuide.html
+++ b/src/main/resources/view/DeveloperGuide.html
@@ -728,7 +728,7 @@ The <code>Model</code> component also uses the <em>Facade Pattern</em> to allow 
 <br></p>
 <h2 id="appendix-c-:-non-functional-requirements"><a class="header-link" href="#appendix-c-:-non-functional-requirements"></a>Appendix C : Non-Functional Requirements</h2>
 <ol class="list">
-<li><p>Should work on any <a href="https://hackmd.io/EYBgHATAxgzGAmBaA7BAjEgLMNNEE4QBDZRIgVnQDN1Mj9NMg===?view#mainstream-os">mainstream OS</a>.</p>
+<li><p>Should work on any mainstream OS.</p>
 </li>
 <li><p>Should be able to store up to 500 tasks.</p>
 </li>
